<resources>
    <string name="app_name">EZFarm</string>
    <string name="nav_home">Home</string>
    <string name="nav_camera">Camera</string>
    <string name="add_fab">Add_Fab</string>
    <string name="app_icon">App Icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hero_image">Hero image</string>
    <string name="diagnose_button_text">Diagnose Your Plant</string>
    <string name="plant_list_title">Your plant</string>
    <string name="plant_list_action">See All</string>
    <string name="list_thumbnail">list thumbnail</string>
    <string name="plant_name">Plant name</string>
    <string name="planted_date">Planted: %1$s</string>
    <string name="harvest_date">Harvest: %1$s</string>
    <string name="plant_growth_seeding">Seeding</string>
    <string name="camera_button_background">camera button background</string>
    <string name="camera_button">camera button</string>
    <string name="back_button">back button</string>
    <string name="forward_button">forward button</string>
    <string name="loading_dots">Loading dots</string>
    <string name="welcome_logo">welcome logo</string>
    <string name="welcome_title_text">Your Plant Disease Detector App</string>
    <string name="welcome_subtitle_text">Identify diseases fast and ensure healthy growth for your plants.</string>
    <string name="welcome_button">Get Started</string>
    <string name="preview_image">preview image</string>
    <string name="onboarding_image_one">onboarding image one</string>
    <string name="onboarding_title_one">Fast and Accurate Detection</string>
    <string name="onboarding_title_two">Instant Treatment Recommendations</string>
    <string name="onboarding_title_three">Real-Time Plant Monitoring</string>
    <string name="onboarding_subtitle_one">Quickly and accurately detects plant diseases.</string>
    <string name="onboarding_subtitle_two">Provides immediate solutions and advice.</string>
    <string name="onboarding_subtitle_three">Continuously monitors plant health in real-time.</string>
    <string name="text_hint">Planted date</string>
    <string name="cancel">Cancel</string>
    <string name="add_plant">Add Plant</string>
    <string name="add_plant_to_collection">Add to Your Plant Collection</string>
    <string name="deskripsi_logo">logo deskripsi</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gejala">Gejala</string>
    <string name="pencegahan">Pencegahan</string>
    <string name="Penanganan">Penanganan</string>
    <string name="day">Day %1$s</string>
    <string name="penanganan_title">penanganan_title</string>
    <string name="cth_penanganan">basahkan tanah dengan air lakukan pembajakan untuk mempersiapkan tanah dalam keadaan lunak dan gembur serta cocok untuk penanaman</string>
    <string name="plant_status">Plant Status</string>
    <string name="date_empty_error">Date Can\'t Be Empty</string>
    <string name="plant_type_empty_error">Plan Type Must Be Selected</string>
    <string name="camera_success">Berhasil mengambil gambar.</string>
    <string name="camera_failure">Gagal mengambil gambar.</string>

    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="penanganan_content">
        a. Pratanam\n• Sanitasi tanaman inang\n• Pemilihan varietas tahan sesuai sebaran ras\n\nb. Pesemaian\n• Penggunaan benih sehat\n• Sanitasi inang pada saluran irigasi\n• Hindari penggenangan terlalu dalam\n\nc. Tanaman Muda (Tanam - Anakan maksimum)\n• Pemupukan berimbang sesuai anjuran setempat\n• Sanitasi rerumputan sumber patogen\n• Pengeringan lahan secara berkala, yaitu 1 hari diairi dan 3-4 hari dikeringkan, terutama pada daerah endemik serangan penyakit\n\nd. Pengendalian HDB dengan Bakteri Antagonis CorynebacteriumSp. (BPOPT Jatisari, Karawang)\n• Aplikasi efektif 3 kali, yaitu saat:\n• Perlakuan benih\n• 28 hst\n• 42 hst
    </string>
    <string name="scan_result_image">scan result image</string>
    <string name="plant_deleted_notification">Plant deleted</string>
    <string name="set_notification">Set notification</string>
    <string-array name="Plants">
        <item>Rice</item>
        <item>Wheat</item>
        <item>Potato</item>
        <item>Carrot</item>
    </string-array>
</resources>