<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/hero_image"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:contentDescription="@string/hero_image"
        android:scaleType="fitXY"
        android:src="@drawable/home_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_icon" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="24dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="@string/diagnose_button_text"
        android:textSize="16sp"
        app:icon="@drawable/scan_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@id/text_row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hero_image" />

    <LinearLayout
        android:id="@+id/text_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/scan_button">

        <TextView
            android:id="@+id/plant_list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plant_list_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/plant_list_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plant_list_action"
            android:textAlignment="textEnd"
            android:textColor="@color/dartmouth_green" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_row" />

    <ImageView
        android:id="@+id/add_fab"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_fab"
        android:src="@drawable/home_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>