<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginVertical="8dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp"
        >
        <ImageView
            android:id="@+id/list_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/list_item_image"
            android:contentDescription="@string/list_thumbnail"
            />
        <RelativeLayout
            android:layout_toEndOf="@id/list_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            >
            <com.google.android.material.chip.Chip
                android:id="@+id/checked_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/baseline_check_circle_24"
                app:chipCornerRadius="20dp"
                app:chipBackgroundColor="#4D106A52"
                android:text="@string/plant_name"
                />
            <RelativeLayout
                android:id="@+id/plant_dates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/checked_chip"
                android:layout_marginVertical="4dp"
                >
                <TextView
                    android:id="@+id/planted_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/planted_date"
                    />
                <TextView
                    android:id="@+id/harvest_date_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/harvest_date"
                    android:layout_below="@id/planted_date_tv"
                    />
            </RelativeLayout>
            <TextView
                android:id="@+id/plant_growth_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plant_growth_seeding"
                android:layout_below="@id/plant_dates"
                android:textColor="@color/dartmouth_green"
                />
        </RelativeLayout>
    </RelativeLayout>


</androidx.cardview.widget.CardView>