<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".ui.onboarding.OnboardingActivity">

    <ImageView
        android:id="@+id/onboarding_image_one"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/onboarding_image_one"
        android:src="@drawable/onboarding_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboarding_image_two"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="100dp"
        android:alpha="0"
        android:contentDescription="@string/onboarding_image_one"
        android:src="@drawable/onboarding_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/onboarding_image_three"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="100dp"
        android:alpha="0"
        android:contentDescription="@string/onboarding_image_one"
        android:src="@drawable/onboarding_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/onboarding_title_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="96dp"
        android:text="@string/onboarding_title_one"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_image_one" />

    <TextView
        android:id="@+id/onboarding_title_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        android:text="@string/onboarding_title_two"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/onboarding_title_one" />

    <TextView
        android:id="@+id/onboarding_title_third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        android:text="@string/onboarding_title_three"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/onboarding_title_one" />

    <TextView
        android:id="@+id/onboarding_subtitle_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_subtitle_one"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_title_one" />

    <TextView
        android:id="@+id/onboarding_subtitle_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        android:text="@string/onboarding_subtitle_two"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/onboarding_subtitle_one" />

    <TextView
        android:id="@+id/onboarding_subtitle_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:alpha="0"
        android:text="@string/onboarding_subtitle_three"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/onboarding_subtitle_one" />

    <ImageView
        android:id="@+id/first_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/loading_dots"
        android:src="@drawable/loading_dots"
        app:layout_constraintBottom_toBottomOf="@id/second_dot"
        app:layout_constraintEnd_toStartOf="@id/second_dot"
        app:layout_constraintStart_toEndOf="@id/back_arrow" />

    <ImageView
        android:id="@+id/second_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:contentDescription="@string/loading_dots"
        android:scaleX=".75"
        android:scaleY=".75"
        android:src="@drawable/loading_dots"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_subtitle_one" />

    <ImageView
        android:id="@+id/third_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:contentDescription="@string/loading_dots"
        android:scaleX=".75"
        android:scaleY=".75"
        android:src="@drawable/loading_dots"
        app:layout_constraintBottom_toBottomOf="@id/second_dot"
        app:layout_constraintEnd_toStartOf="@id/forward_arrow"
        app:layout_constraintStart_toEndOf="@id/second_dot" />

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/onboarding_back_button"
        app:layout_constraintBottom_toBottomOf="@id/second_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_dot" />

    <ImageView
        android:id="@+id/forward_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:contentDescription="@string/forward_button"
        android:src="@drawable/onboarding_forward_button"
        app:layout_constraintBottom_toBottomOf="@id/second_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/second_dot" />


</androidx.constraintlayout.motion.widget.MotionLayout>