<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/camera_button_bar_background"
    android:clickable="true"
    android:focusable="true"
    android:padding="32dp"
    tools:context=".ui.add.AddFragment">

    <ImageView
        android:id="@+id/dialog_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/list_thumbnail"
        android:src="@drawable/list_item_image"
        app:layout_constraintBottom_toTopOf="@id/button_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/dialog_spinner_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_thumb"
        app:layout_constraintTop_toTopOf="@id/dialog_thumb" />

    <TextView
        android:id="@+id/calendar_pick"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/camera_button_bar_background"
        android:hint="@string/text_hint"
        android:padding="8dp"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/round_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="@id/dialog_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_thumb" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_thumb">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/dartmouth_green"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/add_plant" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>